# J_Fahter

./: .env.example  CLAUDE.md  Makefile  README.md  alembic.ini  celery_app.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ded3c329e543_init_tables.py
jarvisfather/: config.py
jarvisfather/bot/handlers/: interview.py  payment.py  start.py
jarvisfather/bot/interview/: states.py
jarvisfather/bot/keyboards/: inline.py
jarvisfather/catalog/: loader.py
jarvisfather/catalog/agents/: analytics.md  client_support.md  ecommerce_specialist.md  email_writer.md  marketing_content.md  presentations.md  researcher.md
jarvisfather/catalog/skills/: summarize.md  tone_adjust.md  translate.md
jarvisfather/crypto/: fernet.py
jarvisfather/db/: engine.py  models.py  users.py
jarvisfather/deployer/: claude_auth.py  ssh_client.py  tasks.py
jarvisfather/deployer/bot_template/: bot.py
jarvisfather/deployer/scripts/: install.sh
jarvisfather/rag/: embeddings.py  indexer.py  retriever.py
tests/: test_bot_template.py  test_catalog.py  test_claude_auth.py  test_crypto.py
thoughts/shared/specs/: 2026-04-19-jarvisfather-plan.md  2026-04-19-jarvisfather.md  beget-test-checklist.md
